test/classes/initializers/errors/bothGeneric-lhsInitRhsCons.good
bothGeneric-lhsInitRhsCons.chpl:20: error: type mismatch in assignment from hasConstruct(int(64)) to hasInit(int(64))
